--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,105 +1,56 @@
-<style>
-
-  .wrpper {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-  }
-
-  .stopwatch {
-    width:330px;
-    text-align: center;
-    color: #76C32E;
-    font-size: 38px;
-    border: 1px solid #000;
-    background-color: #242424;
-    margin-bottom: 0;
-    box-shadow: inset 0 0 15px 7px rgba(0,0,0,.35);
-    border-radius: 10px 10px 0 0;
-    padding: 19px;
-  }
-
-  .stopwatch .text, .stopwatch .halo {
-    min-width: 20px;
-    text-align: right;
-    font-family: Digital7;
-  }
-
-  .stopwatch .text span, .stopwatch .halo span {
-    display: inline-block;
-    padding-right: 5px;
-  }
-
-  .halo {
-    position: absolute;
-    top: 36px;
-    opacity: 0.3;
-  }
-
-  .stopwatch-controller {
-    width:368px;
-    background-color: #fff;
-    display: flex;
-    border-bottom-right-radius: 10px;
-    border-bottom-left-radius: 10px;
-  }
-
-  .stopwatch-controller div {
-    color: #000;
-    text-align: center;
-    padding: 10px;
-    font-size: 19px;
-    border-left: 1px solid #A8BCDE;
-    cursor: pointer;
-  }
-
-  .stopwatch-controller div:hover {
-    color: #ad1ce4;
-  }
-
-  .stopwatch-controller>div:first-child {
-    border-left: none;
-  }
-
-</style>
-
 <div class="wrpper">
-  <div class="stopwatch" >
+  <div class="stopwatch">
     <span class="halo">
-      <span>88</span>
-      <span>:</span>
-      <span>88</span>
-      <span>.</span>
-      <span>88</span>
+      <span>8</span>
+      <span>8</span>
+      <span style="text-align: center">:</span>
+      <span>8</span>
+      <span>8</span>
+      <span style="text-align: center">.</span>
+      <span>8</span>
+      <span>8</span>
     </span>
     <span class="text">
-      <span>00</span>
-      <span>:</span>
-      <span>02</span>
-      <span>.</span>
-      <span>43</span>
+      <span>{{displayTime[0]}}</span>
+      <span>{{displayTime[1]}}</span>
+      <span style="text-align: center">:</span>
+      <span>{{displayTime[2]}}</span>
+      <span>{{displayTime[3]}}</span>
+      <span style="text-align: center">.</span>
+      <span>{{displayTime[4]}}</span>
+      <span>{{displayTime[5]}}</span>
     </span>
   </div>
 </div>
 <div class="wrpper">
   <div class="stopwatch-controller">
-    <div style="flex:4">
-      <i class="fa fa-play"></i>
-      Play
+    <div style="flex:4"
+         (click)="running ? stop() : startStopWatch()">
+      <i *ngIf="!running" class="fa fa-play"></i>
+      {{ actionText }}
     </div>
-    <div style="flex:1">
+    <div style="flex:1" (click)="addTimeFrame()">
       <i class="fa fa-clock-o"></i>
     </div>
-    <div style="flex:1">
+    <div style="flex:1" (click)="clear()">
       <i class="fa fa-trash-o"></i>
     </div>
   </div>
 </div>
 <div class="wrpper">
-  <br>
-  <br>
-  <div style="text-align: left; width: 360px">
-    <span>00:01.61</span>
+  <div>
+    <div class="logs"
+         *ngFor="let time of timeWatchArray; let i = index">
+      <div class="remove" (click)="remove(i)">REMOVE</div>
+      <span>{{time[0]}}</span>
+      <span>{{time[1]}}</span>
+      <span style="text-align: center">:</span>
+      <span>{{time[2]}}</span>
+      <span>{{time[3]}}</span>
+      <span style="text-align: center">.</span>
+      <span>{{time[4]}}</span>
+      <span>{{time[5]}}</span>
+    </div>
   </div>
 </div>
 
