--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,3 +8,10 @@ body {
   background: #333333;
   font-family: "Helvetica Neue";
 }
+
+
+.wrpper {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
