--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,41 +1,3 @@
-<div class="wrpper">
-  <div class="stopwatch">
-    <span class="halo">
-      <span>8</span>
-      <span>8</span>
-      <span style="text-align: center">:</span>
-      <span>8</span>
-      <span>8</span>
-      <span style="text-align: center">.</span>
-      <span>8</span>
-      <span>8</span>
-    </span>
-    <span class="text">
-      <span>{{displayTime[0]}}</span>
-      <span>{{displayTime[1]}}</span>
-      <span style="text-align: center">:</span>
-      <span>{{displayTime[2]}}</span>
-      <span>{{displayTime[3]}}</span>
-      <span style="text-align: center">.</span>
-      <span>{{displayTime[4]}}</span>
-      <span>{{displayTime[5]}}</span>
-    </span>
-  </div>
-</div>
-<div class="wrpper">
-  <div class="stopwatch-controller">
-    <div style="flex:4"
-         (click)="running ? stop() : startStopWatch()">
-      <i *ngIf="!running" class="fa fa-play"></i>
-      {{ actionText }}
-    </div>
-    <div style="flex:1" (click)="addTimeFrame()">
-      <i class="fa fa-clock-o"></i>
-    </div>
-    <div style="flex:1" (click)="clear()">
-      <i class="fa fa-trash-o"></i>
-    </div>
-  </div>
-</div>
+<app-stopwatch></app-stopwatch>
 <app-times></app-times>
 <router-outlet></router-outlet>
