--- a/src/app/components/stopwatch/stopwatch.component.scss
+++ b/src/app/components/stopwatch/stopwatch.component.scss
@@ -1,13 +1,13 @@
 .stopwatch {
   width: 330px;
   text-align: center;
-  color: #76C32E;
+  color: #6cc11d;
   font-size: 38px;
   border: 1px solid #000;
   background-color: #242424;
   margin-bottom: 0;
-  box-shadow: inset 0 0 15px 7px rgba(0, 0, 0, .35);
   border-radius: 10px 10px 0 0;
+  box-shadow: inset 0 0 15px 7px rgba(0, 0, 0, .35);
   padding: 19px;
   letter-spacing: 2px;
   height: 55px;
@@ -23,6 +23,21 @@
     text-align: right;
     min-width: 20px;
   }
+
+  .blink {
+    animation: blink-animation 1s steps(5, start) infinite;
+    -webkit-animation: blink-animation 1s steps(5, start) infinite;
+  }
+  @keyframes blink-animation {
+    to {
+      visibility: hidden;
+    }
+  }
+  @-webkit-keyframes blink-animation {
+    to {
+      visibility: hidden;
+    }
+  }
 }
 
 .halo {
@@ -37,19 +52,19 @@
   display: flex;
   border-bottom-right-radius: 10px;
   border-bottom-left-radius: 10px;
-}
 
-.stopwatch-controller div {
-  color: #000;
-  text-align: center;
-  padding: 10px;
-  font-size: 19px;
-  border-left: 1px solid #A8BCDE;
-  cursor: pointer;
-}
+  div {
+    color: #000;
+    text-align: center;
+    padding: 10px;
+    font-size: 19px;
+    border-left: 1px solid #A8BCDE;
+    cursor: pointer;
+  }
 
-.stopwatch-controller div:hover {
-  color: #ad1ce4;
+  div:hover {
+    color: #1784e2;
+  }
 }
 
 .stopwatch-controller > div:first-child {
