--- a/src/app/components/times/times.component.scss
+++ b/src/app/components/times/times.component.scss
@@ -10,7 +10,7 @@
   span {
     display: inline-block;
     padding-right: 3px;
-    font-family: Digital7;
+    font-family: Digital7, sans-serif;
 
   }
 
