Fix css, add unsubscribe

--- a/src/app/components/stopwatch/stopwatch.component.html
+++ b/src/app/components/stopwatch/stopwatch.component.html
@@ -1,4 +1,4 @@
-<div class="wrpper">
+<div class="wrapper">
   <div class="stopwatch">
     <span class="halo">
       <span>8</span>
@@ -24,7 +24,8 @@
     </span>
   </div>
 </div>
-<div class="wrpper">
+
+<div class="wrapper">
   <div class="stopwatch-controller">
     <div style="flex:4"
          (click)="running ? stop() : startStopWatch()">
