--- a/src/app/components/stopwatch/stopwatch.component.scss
+++ b/src/app/components/stopwatch/stopwatch.component.scss
@@ -15,7 +15,7 @@
   .text, .halo {
     min-width: 20px;
     text-align: right;
-    font-family: Digital7;
+    font-family: Digital7, sans-serif;
   }
 
   .text span, .halo span {
