--- a/src/app/components/times/times.component.html
+++ b/src/app/components/times/times.component.html
@@ -1,4 +1,4 @@
-<div class="wrpper">
+<div class="wrapper">
   <div>
     <div class="logs"
          *ngFor="let time of timeWatchArray$ | async; let i = index">
